Fix spacing on homepage

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -38,6 +38,8 @@
 
     > li {
         margin-bottom: $spacing-unit;
+        padding: 0;
+        text-indent: 0;
     }
 }
 
